# zombus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: install-dev.sh
src/zombus/: __init__.py  processing.py  registration.py
src/zombus/definitions/: __init__.py  contracts.py  enums.py  errors.py
src/zombus/implementation/: __init__.py  processing.py  registration.py
src/zombus/implementation/internals/: entities.py
src/zombus/internals/: __init__.py  entities.py
src/zombus/patterns/: __init__.py
src/zombus/patterns/errors/: __init__.py  data.py  generic.py
src/zombus/patterns/messages/: __init__.py  generic.py  views.py
src/zombus/processing/: __init__.py  enums.py  internals.py  pipeline.py  processors.py
src/zombus/registration/: __init__.py  collecting.py  entities.py  registry.py
tests/: conftest.py  test_actors.py  test_collecting.py  test_errors.py  test_patterns.py  test_processing.py  test_registration.py
